objects/Veda_Fraud_Date_Of_Birth_Indicator__c.object
<CustomObject>
    <fields>
        <fullName>Bureau_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bureau Result</label>
        <referenceTo>Veda_Fraud_Bureau_Result__c</referenceTo>
        <relationshipName>Date_Of_Birth_Indicators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth_Day_Indicator__c</fullName>
        <label>Date Of Birth Day Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth_Indicator__c</fullName>
        <label>Date Of Birth Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth_Month_Indicator__c</fullName>
        <label>Date Of Birth Month Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth_Year_Indicator__c</fullName>
        <label>Date Of Birth Year Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Fraud Date Of Birth Indicator</label>
    <nameField>
        <label>Date Of Birth Indicator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Fraud Date Of Birth Indicator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>